[gd_scene load_steps=30 format=3 uid="uid://bjsg4iv05da21"]

[ext_resource type="PackedScene" uid="uid://l3jrk1p1oqvf" path="res://Components/health_component.tscn" id="1_ka688"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_w0jxb"]
[ext_resource type="Texture2D" uid="uid://43o514iuixnu" path="res://Player Assets/Player_Shield_Done.png" id="2_dsag6"]
[ext_resource type="PackedScene" uid="uid://bp26ojm1wy0f5" path="res://Components/hitbox_component.tscn" id="2_o6b7t"]
[ext_resource type="PackedScene" uid="uid://cpgmhfo3tcny" path="res://Components/hurt_box.tscn" id="5_chhh5"]
[ext_resource type="PackedScene" uid="uid://d3fv8admictf0" path="res://Scenes/block_box.tscn" id="6_024gy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qkmrw"]
radius = 6.0
height = 18.0

[sub_resource type="Animation" id="Animation_1pxdn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2j7nc"]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_0c54q"]
resource_name = "attack_side"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_0n005"]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_pe1p8"]
resource_name = "idle_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 2, 5, 4]
}

[sub_resource type="Animation" id="Animation_6q4ki"]
resource_name = "idle_side"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_nnxou"]
resource_name = "idle_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_obwr1"]
resource_name = "shield_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1jqg4"]
resource_name = "shield_side"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_e41l4"]
resource_name = "shield_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_2awuv"]
resource_name = "spear_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ntqif"]
resource_name = "spear_side"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_kgq5v"]
resource_name = "spear_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_3bucb"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_2r040"]
resource_name = "walk_side"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_gkf7x"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yr24"]
_data = {
"RESET": SubResource("Animation_1pxdn"),
"attack_down": SubResource("Animation_2j7nc"),
"attack_side": SubResource("Animation_0c54q"),
"attack_up": SubResource("Animation_0n005"),
"idle_down": SubResource("Animation_pe1p8"),
"idle_side": SubResource("Animation_6q4ki"),
"idle_up": SubResource("Animation_nnxou"),
"shield_down": SubResource("Animation_obwr1"),
"shield_side": SubResource("Animation_1jqg4"),
"shield_up": SubResource("Animation_e41l4"),
"spear_down": SubResource("Animation_2awuv"),
"spear_side": SubResource("Animation_ntqif"),
"spear_up": SubResource("Animation_kgq5v"),
"walk_down": SubResource("Animation_3bucb"),
"walk_side": SubResource("Animation_2r040"),
"walk_up": SubResource("Animation_gkf7x")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4j7ti"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_12qrb"]
radius = 1.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t26oh"]
size = Vector2(20, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udcpm"]
size = Vector2(20, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byklj"]
size = Vector2(20, 6)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_w0jxb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_dsag6")
hframes = 6
vframes = 10

[node name="HealthComponent" parent="." instance=ExtResource("1_ka688")]
max_health = 100

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["Player_Hitbox"] instance=ExtResource("2_o6b7t")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_qkmrw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4yr24")
}
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_4j7ti")

[node name="HurtBox_down" parent="." groups=["Player_Hurtbox"] instance=ExtResource("5_chhh5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox_down"]
position = Vector2(0, 14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_12qrb")

[node name="HurtBox_right" parent="." groups=["Player_Hurtbox"] instance=ExtResource("5_chhh5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox_right"]
position = Vector2(14, 3)
shape = SubResource("CapsuleShape2D_12qrb")

[node name="HurtBox_left" parent="." groups=["Player_Hurtbox"] instance=ExtResource("5_chhh5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox_left"]
position = Vector2(-14, 3)
shape = SubResource("CapsuleShape2D_12qrb")

[node name="HurtBox_up" parent="." groups=["Player_Hurtbox"] instance=ExtResource("5_chhh5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox_up"]
position = Vector2(0, -13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_12qrb")

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BlockBox_up" parent="." groups=["Player_Blockbox"] instance=ExtResource("6_024gy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockBox_up"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_t26oh")

[node name="BlockBox_down" parent="." groups=["Player_Blockbox"] instance=ExtResource("6_024gy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockBox_down"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_udcpm")

[node name="BlockBox_left" parent="." groups=["Player_Blockbox"] instance=ExtResource("6_024gy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockBox_left"]
position = Vector2(-13, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_byklj")

[node name="BlockBox_right" parent="." groups=["Player_Blockbox"] instance=ExtResource("6_024gy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockBox_right"]
position = Vector2(13, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_byklj")

[node name="BlockBox_Duration" type="Timer" parent="."]
one_shot = true

[node name="Block_Stun_Duration" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
[connection signal="ready" from="BlockBox_Duration" to="." method="_on_block_box_duration_ready"]
